// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkBalance, not enought ethBalance 1`] = `
Array [
  Array [
    "0x00D8d0660b243452fC2f996A892D3083A903576F",
    "16ea9a15dd4381a2ea9c41531fee530e6a78dadc1a86d3e64f207c35f4be1d17",
    "address0",
    3,
    10,
  ],
]
`;

exports[`checkBalance, not enought tokenAllowance 1`] = `
Array [
  Array [
    "code1",
    "0x3d00299fbf830c43bb9523d44bdeb0afa874658c",
  ],
]
`;

exports[`checkBalance, not enought tokenBalance & need transferEth 1`] = `
Array [
  Array [
    "0x00D8d0660b243452fC2f996A892D3083A903576F",
    "16ea9a15dd4381a2ea9c41531fee530e6a78dadc1a86d3e64f207c35f4be1d17",
    "0x3d00299fbf830c43bb9523d44bdeb0afa874658c",
    3,
    10,
  ],
]
`;

exports[`checkBalance, not enought tokenBalance & need transferEth 2`] = `
Array [
  Array [
    "0x3d00299fbf830c43bb9523d44bdeb0afa874658c",
    "702ce1e99d04306ea8cb72e916b3c40df5b87f7e6dbc0a9d4b064a2917cea686",
    5000000000,
    160000,
    3,
  ],
]
`;

exports[`checkBalance, not enought tokenBalance 1`] = `
Array [
  Array [
    "0x3d00299fbf830c43bb9523d44bdeb0afa874658c",
    "702ce1e99d04306ea8cb72e916b3c40df5b87f7e6dbc0a9d4b064a2917cea686",
    5000000000,
    160000,
    3,
  ],
]
`;

exports[`checkBalance, not enought wethAllowance 1`] = `
Array [
  Array [
    "code2",
    "address0",
  ],
]
`;

exports[`checkBalance, not enought wethBalance 1`] = `
Array [
  Array [
    2.1,
    "address0",
  ],
]
`;

exports[`checkBalance, not enought wethBalance and not enough ethBalance 1`] = `
Array [
  Array [
    "0x00D8d0660b243452fC2f996A892D3083A903576F",
    "16ea9a15dd4381a2ea9c41531fee530e6a78dadc1a86d3e64f207c35f4be1d17",
    "address0",
    3,
    10,
  ],
]
`;

exports[`checkBalance, not enought wethBalance and not enough ethBalance 2`] = `
Array [
  Array [
    3.1,
    "address0",
  ],
]
`;

exports[`checkBalance, too much tokenBalance,need redeem 1`] = `
Array [
  Array [
    "0x3d00299fbf830c43bb9523d44bdeb0afa874658c",
    "702ce1e99d04306ea8cb72e916b3c40df5b87f7e6dbc0a9d4b064a2917cea686",
    200,
    200,
    5000000000,
    80000,
  ],
]
`;
